# Personal-Website

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile.toml  Matthew_Champagne_Resume.tex  README.md  build.rs  index.html  input-6b13875a188b77a1.css  input-a8262c355aba8301.css  input-d5c6055346d34574.css  input.css  personal-web-6b0dbedf9e324fd1.js  personal-web-6b0dbedf9e324fd1_bg.wasm  personal-web-ad9b04a31d499b17.js  personal-web-b355d5e4361be197.js  personal-web-b7ba2bb89ccffadf_bg.wasm  personal-web-bc44f97da2fe473f_bg.wasm  personal-web-c83c6cc461e80432.js  personal-web-ce30a4d1e31b0a93.js
docs/: index.html  personal-web-fe72d50bb0ec84e1.js
public/: 404.html
release/: 404.html  CNAME  index.html  input-7e5d8636d2d42623.css  input-889770687a9843e7.css  input-d2cc4c619fa4a2de.css  personal-web-88e6c9f47e2c1471.js  personal-web-88e6c9f47e2c1471_bg.wasm  personal-web-ad9b04a31d499b17_bg.wasm  personal-web-b355d5e4361be197.js  personal-web-b355d5e4361be197_bg.wasm  personal-web-b7ba2bb89ccffadf.js  personal-web-bc44f97da2fe473f.js  personal-web-c83c6cc461e80432_bg.wasm  personal-web-ce30a4d1e31b0a93_bg.wasm  personal-web-fe72d50bb0ec84e1.js  personal-web-fe72d50bb0ec84e1_bg.wasm
src/: app.rs  icons.rs  main.rs
src/app/: about.rs  contact.rs  experience.rs  footer.rs  homepage.rs  page_heading.rs  project.rs  reused_buttons.rs  sidebar.rs  tools.rs
