[package]
name = "personal-web"
authors = ["Matthew Champagne <mchampagne@orbitintl.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
log = "0.4.27"

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.100" }
console_log = { version = "1.0.0" }
console_error_panic_hook = { version = "0.1.7" }
chrono = "0.4.41"
leptos-use = "0.16.2"
chrono-tz = "0.10.4"
